# Vulkan-Voxels2

./: .gitignore  Cargo.toml  build.rs
shaders/: gui.frag  gui.vert  shader.mesh  shader.vert
src/: app.rs  bench.rs  debug.rs  events.rs  gui.rs  inputs.rs  main.rs  options.rs  utils.rs
src/render/: buffer.rs  camera.rs  commands.rs  config.rs  depth.rs  descriptors.rs  devices.rs  framebuffers.rs  gui_renderer.rs  image.rs  instance.rs  mod.rs  pipeline.rs  queues.rs  regions.rs  render_pass.rs  renderer.rs  staging.rs  surface.rs  swapchain.rs  sync.rs  texture.rs  uniform.rs  vertex.rs  window.rs
src/render/memory/: allocator.rs  dumb_allocator.rs  mod.rs
src/utils/: deref_once.rs  deref_once_lock.rs  mod.rs
src/world/: blocks.rs  chunk.rs  chunk_mesh.rs  chunks.rs  generator.rs  meshing.rs  mod.rs  pos.rs
