[package]
name = "vulkan_voxels2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
memoffset = "0.8.0"
nalgebra-glm = "0.18.0"
simplelog = "0.12.1"
vulkanalia = { version = "0.18.0", features = ["libloading", "window"] }
winit = "0.28.3"
