[package]
name = "vulkan_voxels2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
crossbeam-channel = "0.5.8"
egui = "0.21.0"
egui-winit = "0.21.1"
log = { version = "0.4.17" }
memoffset = "0.8.0"
mini-moka = "0.10.0"
nalgebra-glm = "0.18.0"
noise = { version = "0.8.2" }
simplelog = "0.12.1"
vulkanalia = { version = "0.18.0", features = ["libloading", "window"] }
winit = "0.28.3"

[features]
# for debug purpose
dumb_allocator = []


[profile.release]
panic = "abort"
lto = true
opt-level = 3
strip = true
codegen-units = 1

[dev-dependencies]
ctor = "0.2.0"
